--- a/src/styles/components/in-page-nav.scss
+++ b/src/styles/components/in-page-nav.scss
@@ -13,10 +13,8 @@
   }
 
   &--active a {
-    // color: $colour-sapphire-blue;
+    color: $colour-sapphire-blue;
     font-weight: 700;
-    background: #000;
-    color: #fff;
   }
 
   &--disabled {
