Define colours in SASS and export to JS

--- a/src/styles/common/_buttons.scss
+++ b/src/styles/common/_buttons.scss
@@ -1,6 +1,6 @@
 @import '../settings';
 @import '../mixins';
-@import '../colours.js';
+@import '../colours';
 
 .button {
   --main-color: var(--main-button-color, #{$colour-sea-blue});
