--- a/src/styles/common/_icons.scss
+++ b/src/styles/common/_icons.scss
@@ -1,14 +1,14 @@
 @import '../settings';
-@import '../colours.js';
+@import '../colours';
 
 .icon {
   &--reviewed {
-    color: $colour-reviewed;
+    color: map-get($franklin-colours, colourReviewed);
   }
   &--unreviewed {
-    color: $colour-unreviewed;
+    color: map-get($franklin-colours, colourUnreviewed);
   }
   &--uniparc {
-    color: $colour-uniparc;
+    color: map-get($franklin-colours, colourUniparc);
   }
 }
