--- a/src/styles/components/chip.scss
+++ b/src/styles/components/chip.scss
@@ -1,4 +1,4 @@
-@import '../colours.js';
+@import '../colours';
 @import '../common/utils';
 @import '../settings';
 @import '../franklin-settings';
