--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -1,5 +1,5 @@
 @import '../settings';
-@import '../colours.js';
+@import '../colours';
 @import '../mixins';
 
 $shadow-padding: 0.125rem;
@@ -7,13 +7,16 @@ $card-link-padding: 0.5rem;
 
 .card {
   @include box-shadow($shadow-padding);
-  background-color: $colour-sky-white;
+  background-color: map-get($franklin-colours, colourGreyscale100);
   border-radius: 0.2rem;
   margin: $global-margin $shadow-padding;
   width: calc(100% - #{$global-padding});
 
   &--has-hover:hover {
-    background-color: scale-color($color: $colour-platinum, $lightness: 40%);
+    background-color: scale-color(
+      $color: map-get($franklin-colours, colourGreyscale200),
+      $lightness: 40%
+    );
     transition: 0.5s background-color ease;
     cursor: pointer;
   }
@@ -39,17 +42,20 @@ $card-link-padding: 0.5rem;
     display: flex;
     align-items: baseline;
     border-bottom: 0.125rem solid;
-    border-color: $colour-platinum;
+    border-color: map-get($franklin-colours, colourGreyscale200);
   }
   &__actions {
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
     padding: 0;
-    background-color: $colour-selected;
+    background-color: map-get($franklin-colours, colourSelected);
   }
   &--active {
-    background-color: scale-color($color: $colour-platinum, $lightness: 20%);
+    background-color: scale-color(
+      $color: map-get($franklin-colours, colourGreyscale200),
+      $lightness: 20%
+    );
   }
 }
 
@@ -58,12 +64,15 @@ $card-link-padding: 0.5rem;
   padding: $card-link-padding;
   font-weight: 600;
   white-space: nowrap;
-  background-color: $colour-selected;
+  background-color: map-get($franklin-colours, colourSelected);
   &:hover {
     @include hover($with-transition: true);
   }
   &--active {
-    background-color: scale-color($color: $colour-platinum, $lightness: 20%);
+    background-color: scale-color(
+      $color: map-get($franklin-colours, colourGreyscale200),
+      $lightness: 20%
+    );
   }
 }
 
