--- a/src/styles/components/info-list.scss
+++ b/src/styles/components/info-list.scss
@@ -1,5 +1,5 @@
 @import '../settings';
-@import '../colours.js';
+@import '../colours';
 @import '../mixins.scss';
 
 $decorative-bar: 0.125rem solid $colour-vivid-cerulean;
