--- a/src/styles/components/page-intro.scss
+++ b/src/styles/components/page-intro.scss
@@ -1,5 +1,5 @@
 @import '../settings';
-@import '../colours.js';
+@import '../colours';
 
 .page-intro {
   .intro-content {
@@ -17,13 +17,13 @@
   }
   button {
     cursor: pointer;
-    color: $colour-yankees-blue;
+    color: map-get($franklin-colours, colourGreyscale600);
     font-weight: inherit;
     &:focus {
       outline: none;
     }
   }
   small {
-    color: $colour-yankees-blue;
+    color: map-get($franklin-colours, colourGreyscale600);
   }
 }
