--- a/src/styles/components/window.scss
+++ b/src/styles/components/window.scss
@@ -1,11 +1,11 @@
 @import '../settings';
-@import '../colours.js';
+@import '../colours';
 @import '../mixins';
 
 .window {
   display: flex;
   flex-direction: column;
-  border: 0.1rem solid $colour-yankees-blue;
+  border: 0.1rem solid map-get($franklin-colours, colourGreyscale600);
 
   &--with-shadow {
     @include box-shadow(0.3rem);
@@ -14,8 +14,8 @@
   &__header {
     width: 100%;
     height: 2rem;
-    color: $colour-sky-white;
-    background-color: $colour-yankees-blue;
+    color: map-get($franklin-colours, colourGreyscale100);
+    background-color: map-get($franklin-colours, colourGreyscale600);
     font-weight: 700;
     padding: 0 $global-padding / 2;
     display: flex;
@@ -32,12 +32,12 @@
     width: 100%;
     flex-grow: 1;
     padding: $global-padding / 2;
-    background-color: $colour-sky-white;
+    background-color: map-get($franklin-colours, colourGreyscale100);
   }
 
   &__footer {
     width: 100%;
-    background-color: $colour-sky-white;
+    background-color: map-get($franklin-colours, colourGreyscale100);
     display: flex;
     justify-content: flex-end;
     padding: $global-padding / 2;
@@ -55,8 +55,8 @@
     &--icon-only {
       width: 1rem;
       height: 1rem;
-      background-color: $colour-sky-white;
-      color: $colour-sea-blue;
+      background-color: map-get($franklin-colours, colourGreyscale100);
+      color: map-get($franklin-colours, colourPrimary400);
       cursor: pointer;
       border-radius: 0.5rem;
     }
